--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+    <title>William R. O'Reilly</title>
     <style>
         :root {
             --primary-color: #2d2d2d;
@@ -174,13 +174,13 @@
     <header>
         <div class="container">
             <h1 class="glitch-title">Creative Engineer</h1>
-            <p class="subtitle">Media Design × Reverse Engineering × Development</p>
+            <p class="subtitle">Media Design × AI Engineer x Reverse Engineering × Development</p>
         </div>
     </header>
 
     <section id="about" class="container">
         <h2 class="section-title">About Me</h2>
-        <p>I'm a creative technologist passionate about the intersection of design and engineering. With a focus on media design and software development, I explore the boundaries of digital creativity while diving deep into system internals through reverse engineering.</p>
+        <p>I'm a creative technologist passionate about the intersection of design and engineering. With a focus on media design, artificial intelligence and software development, I explore the boundaries of digital creativity while diving deep into system internals through reverse engineering.</p>
     </section>
 
     <section id="skills" class="container">
@@ -192,7 +192,11 @@
             </div>
             <div class="skill-card">
                 <h3>Development</h3>
-                <p>Frontend Development<br>Python<br>C++<br>Assembly</p>
+                <p>Frontend Development<br>All web<br>Python<br>C++<br>Assembly</p>
+            </div>
+            <div class="skill-card">
+                <h3>AI</h3>
+                <p>Prompt Engineer<br>GPT Creator<br>AI Engineer</p>
             </div>
             <div class="skill-card">
                 <h3>Reverse Engineering</h3>
@@ -233,10 +237,10 @@
             <h2 class="section-title">Let's Connect</h2>
             <p>Interested in collaboration? Let's create something amazing together.</p>
             <div class="social-links">
-                <a href="#" class="social-link">GitHub</a>
-                <a href="#" class="social-link">LinkedIn</a>
-                <a href="#" class="social-link">Twitter</a>
-                <a href="#" class="social-link">Email</a>
+                <a href="github.com/wroreilly" class="social-link">GitHub</a>
+                <a href="https://ca.linkedin.com/in/wroreilly" class="social-link">LinkedIn</a>
+                <a href="x.com/wr_oreilly" class="social-link">Twitter</a>
+                <a href="will@wroreilly.com" class="social-link">Email</a>
             </div>
         </div>
     </section>
